applications/ddns-updater/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ddns-updater
  namespace: ddns-updater
spec:
  selector:
    app: ddns-updater
  ports:
  - name: web
    port: 8572
    targetPort: 8572
